<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:support="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/most_popular"
        android:orderInCategory="1"
        android:title="@string/most_popular" />

    <item
        android:id="@+id/highest_rated"
        android:orderInCategory="2"
        android:title="@string/highest_rated" />

    <item
        android:id="@+id/favorites"
        android:orderInCategory="3"
        android:title="@string/favorites" />
    <item
        android:id="@+id/setting"

        android:orderInCategory="4"
        android:title="@string/setting" />
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="1"
        android:title="@string/action_share"
        support:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        support:showAsAction="ifRoom" />

</menu>

    <!--android:icon="@android:drawable/ic_menu_set_as"-->